--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   go_router: ^14.8.1
   http: ^1.3.0
   shared_preferences: ^2.5.3
-
+  blur: ^4.0.2
+  intl: ^0.20.2
+  fl_chart: ^0.71.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,6 +67,13 @@ flutter:
   assets:
   - assets/images/mgmp.jpeg
   - assets/images/mgmp-logo.png
+  - assets/images/mgmp-event.jpg
+  - assets/images/mgmp-artist.webp
+  - assets/images/mgmp-event-manager.png
+  - assets/login_bgImages/mgmploginbg01.jpg
+  - assets/login_bgImages/mgmploginbg02.jpg
+  - assets/login_bgImages/mgmploginbg03.webp
+  - assets/login_bgImages/mgmploginbg04.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
